--- a/carlosjgarza/src/App.css
+++ b/carlosjgarza/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+:root {
+  --myblue: rgb(6, 6, 96);
+  --myyellow: #7d712a;
+  --mywhite: #f5f5f5;
+  --highlight-color: #FFFFCC;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
