--- a/carlosjgarza/src/styles/Intro.css
+++ b/carlosjgarza/src/styles/Intro.css
@@ -53,7 +53,7 @@
   justify-content: space-evenly;
   padding: 10px 30px;
   cursor: pointer;
-  border: 1px solid var(--custom-text-color);
+  border: 1px solid var(--myyblue);
   border-radius: 4px;
 }
 
