--- a/carlosjgarza/src/styles/Intro.css
+++ b/carlosjgarza/src/styles/Intro.css
@@ -63,10 +63,10 @@
 
 .typed-cursor {
   opacity: 1;
-  font-size: 70px;
-  color: var(--custom-text-color);
+  font-size: 100px;
+  color: var(--myblue) !important;
   align-self: flex-end;
-  padding-left: 5px;
+  padding-left: 10px;
 }
 
 .intro-img {
